ensure his name is correct

--- a/src/views/_layout.twig
+++ b/src/views/_layout.twig
@@ -270,14 +270,14 @@
 
       <div class="wrap">
         <header class="site-header">
-          <h1><a href="/">Dr Hugh Schtink, Dime Store Shrink</a></h1>
+          <h1><a href="/">Dr Hugh Schtinck, Dime Store Shrink</a></h1>
           <p>{{ funnyHeader }}</p>
         </header><!-- /.site-header -->
 
         <div role="main" class="site-content">
           {% block content %}
             <h2>Welcome!</h2>
-            <big><p>I'm Dr. Hugh Schtink, your friendly internet psychiatrist!</p></big>
+            <big><p>I'm Dr. Hugh Schtinck, your friendly internet psychiatrist!</p></big>
             <p>I'm the world's cheapest psychoanalyst. But what price can you put on "piece of mind" anyway?</p>
             <p><a href="{{ site.url }}">Tell me what I got, doc!</a></p>
           {% endblock %}
